--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@expo/vector-icons": "~10.0.6",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/bottom-tabs": "^5.3.1",
-    "@react-navigation/native": "^5.2.1",
-    "@react-navigation/stack": "^5.2.16",
+    "@react-navigation/bottom-tabs": "^5.7.0",
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
     "expo": "~37.0.9",
     "expo-asset": "~8.1.0",
     "expo-constants": "~9.0.0",
@@ -30,9 +30,14 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-map-clustering": "^3.3.9",
     "react-native-maps": "0.26.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.7.0",
+    "react-native-redash": "^14.1.1",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-shimmer-placeholder": "git+https://github.com/tomzaku/react-native-shimmer-placeholder.git#expo",
@@ -42,6 +47,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
+    "eslint": "^7.3.1",
+    "eslint-plugin-react": "^7.20.3",
     "jest-expo": "~37.0.0"
   },
   "private": true
