--- a/app.json
+++ b/app.json
@@ -19,7 +19,10 @@
       "**/*"
     ],
     "ios": {
-      "bundleIdentifier": "com.uagm.vocero"
+      "bundleIdentifier": "com.uagm.vocero",
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-2336825697965816~5843879773"
+      }
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
@@ -28,6 +31,7 @@
       "package": "com.uagm.vocero",
       "versionCode": 1,
       "config": {
+        "googleMobileAdsAppId": "ca-app-pub-2336825697965816~5843879773",
         "googleMaps": {
           "apiKey": "AIzaSyClyqqX0nADqfspTcxBUppLomQWrARnC_k"
         }
