--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-shimmer-placeholder": "git+https://github.com/tomzaku/react-native-shimmer-placeholder.git#expo",
     "react-native-web": "~0.11.7",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.20"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20",
+    "expo-ads-admob": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
