--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "expo": "~37.0.9",
+    "expo-ads-admob": "~8.1.0",
     "expo-asset": "~8.1.0",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
@@ -41,9 +42,9 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-shimmer-placeholder": "git+https://github.com/tomzaku/react-native-shimmer-placeholder.git#expo",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.20",
-    "expo-ads-admob": "~8.1.0"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
