--- a/app.json
+++ b/app.json
@@ -23,11 +23,24 @@
       }
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "config": {
+        "firebase": {
+          "apiKey": "AIzaSyBexO8TwcefEwOwUHnf70gNT8OmQV_3sWk",
+          "authDomain": "vocero-8fb92.firebaseapp.com",
+          "databaseURL": "https://vocero-8fb92.firebaseio.com",
+          "projectId": "vocero-8fb92",
+          "storageBucket": "vocero-8fb92.appspot.com",
+          "messagingSenderId": "934076928663",
+          "appId": "1:934076928663:web:02f59566e2be2676040fd2",
+          "measurementId": "G-KHBYQZZ8H5"
+        } 
+      }
     },
     "android": {
       "package": "com.uagm.vocero",
       "versionCode": 1,
+      "googleServicesFile": "./google-services.json",
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-2336825697965816~5843879773",
         "googleMaps": {
