google analytics for ios config

--- a/app.json
+++ b/app.json
@@ -18,6 +18,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "com.uagm.vocero",
+      "googleServicesFile": "./GoogleService-Info.plist",
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-2336825697965816~5843879773"
       }
